Fixed some inverted and not functioning protections